--- a/OnlineHelpDesk/Views/Shared/_Layout1.cshtml
+++ b/OnlineHelpDesk/Views/Shared/_Layout1.cshtml
@@ -28,8 +28,8 @@
                     <h1 class="lead">@Html.ActionLink("Campus Online Help Desk", "Index")</h1>
                     <nav>
                         <ul class="sm">
-                            <li>@Html.ActionLink("Sign Up", "Signup")</li>
-                            <li>@Html.ActionLink("Log In","login")</li>
+                            <li>@Html.ActionLink("Sign Up", "../Account/Signup")</li>
+                            <li>@Html.ActionLink("Log In", "../Account/login")</li>
                             <li>@Html.ActionLink("About", "About")</li>
                             <li>@Html.ActionLink("Contact", "Contact")</li>
                         </ul>
